--- a/app/static/CSS/transition.css
+++ b/app/static/CSS/transition.css
@@ -1,3 +1,3 @@
 * {
-    transition: border-color .5s ease-in-out, background-color .5s ease-in-out, color .5s ease-in-out, font-weight .5s ease-in-out, font-variation-settings .5s ease-in-out, transform .5s ease-in-out, filter .3s ease-in-out;
+    transition: border-color .5s ease-in-out, background-color .5s ease-in-out, color .5s ease-in-out, font-weight .5s ease-in-out, font-variation-settings .5s ease-in-out, transform .5s ease-in-out, filter .3s ease-in-out, translate .3s ease-in-out;
 }
